@@ -1,4 +1,4 @@
-package Catalyst::Action::Serialize::JSON::XS;
+package Catalyst::Action::Deserialize::JSON::XS;
 
 use Moose;
 use namespace::autoclean;
@@ -6,7 +6,7 @@ BEGIN {
     $ENV{'PERL_JSON_BACKEND'} = 2; # Always use compiled JSON::XS
 }
 
-extends 'Catalyst::Action::Serialize::JSON';
+extends 'Catalyst::Action::Deserialize::JSON';
 use JSON::XS ();
 
 our $VERSION = '1.01';
